# qtconfiguration

./: .gitignore  CMakeLists.txt  LICENSE.BSD  README.md  qtconfiguration.pro  sync.profile
config.tests/dconf/: dconf.pro  main.cpp
config.tests/dconf-dbus-1/: dconf-dbus-1.pro  main.cpp
data/cmake/: CMakeLists.txt  QtConfigurationConfig.cmake.in
examples/: examples.pro
examples/configuration/: CMakeLists.txt  configuration.pro
examples/configuration/metaobject/: CMakeLists.txt  main.cpp  metaobject.pro  settings.cpp  settings.h  settingstest.cpp  settingstest.h
examples/configuration/schemas/: main.cpp  schemas.pro
headers/: CMakeLists.txt
headers/QtConfiguration/: CMakeLists.txt  qconfigurationglobal.h
src/: CMakeLists.txt  src.pro
src/configuration/: CMakeLists.txt  configuration-lib.pri  configuration.pro  qconfiguration.cpp  qconfiguration.h  qconfiguration_p.h  qconfigurationbackend.cpp  qconfigurationbackend.h  qconfigurationglobal.h  qconfigurationschema.cpp  qconfigurationschema_p.h  qconfigurationutils.cpp  qconfigurationutils.h  qdconfconfigurationbackend.cpp  qdconfconfigurationbackend.h  qgvariantutils.cpp  qgvariantutils.h  qstaticconfiguration.cpp  qstaticconfiguration.h
src/configuration/qt4support/: configuration.prf  install-helper.pri
src/declarative/: CMakeLists.txt  plugin.cpp  plugins.qmltypes  qmldir  qqmlconfiguration.cpp  qqmlconfiguration_p.h
src/imports/configuration/: configuration.pro  configurationitem.cpp  configurationitem.h  main.cpp  qmldir
